--- a/package.json
+++ b/package.json
@@ -9,17 +9,31 @@
     "lint": "eslint"
   },
   "dependencies": {
+    "countries-and-timezones": "^3.8.0",
+    "country-flag-icons": "^1.6.12",
     "next": "16.1.6",
     "react": "19.2.3",
-    "react-dom": "19.2.3"
+    "react-dom": "19.2.3",
+    "react-hot-toast": "^2.6.0",
+    "ts-pattern": "^5.9.0"
   },
   "devDependencies": {
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
+    "@typescript-eslint/eslint-plugin": "^8.54.0",
+    "@typescript-eslint/parser": "^8.54.0",
     "babel-plugin-react-compiler": "1.0.0",
+    "date-fns": "^4.1.0",
     "eslint": "^9",
     "eslint-config-next": "16.1.6",
-    "typescript": "^5"
+    "eslint-config-prettier": "^10.1.8",
+    "eslint-plugin-import": "^2.32.0",
+    "eslint-plugin-security": "^3.0.1",
+    "eslint-plugin-unused-imports": "^4.3.0",
+    "prettier": "^3.8.1",
+    "sass": "^1.97.3",
+    "typescript": "^5",
+    "typescript-eslint": "^8.54.0"
   }
 }
