--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
     "prettier": "^3.8.1",
     "sass": "^1.97.3",
     "ts-jest": "^29.4.6",
+    "ts-node": "^10.9.2",
     "typescript": "^5",
     "typescript-eslint": "^8.54.0",
     "storybook": "^10.2.6",
